--- a/Style.css
+++ b/Style.css
@@ -12,3 +12,13 @@
     height:600px;
     background-color: rgb(255, 255, 255)
 }
+
+.footer {
+    width: 100%;
+    height: 120px;
+    background-color: black;
+
+.block-1 {
+    width: 30%;
+    height: 120px;
+    background-color: black;
