--- a/Style.css
+++ b/Style.css
@@ -11,6 +11,7 @@
     width:100%;
     height:600px;
     background-color: rgb(255, 255, 255)
+     display: flex; /* дозвіл на переміщення *
 }
 
 .footer {
