--- a/Style.css
+++ b/Style.css
@@ -6,6 +6,10 @@
     width:100%;
     height:120px;
     background-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    allign-items: center;
 }
 .main {
     width:100%;
